--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>This is a demo repo</h1>
+    <h3>H3 should stay up here</h3>
     <p>This is a pragraph uniti just pushing</p>
-    <h3>This is for the pull purpose</h3>
+    
 </body>
 </html>
